[package]
name = "json_value_merge"
version = "0.1.0"
authors = ["Jean-Marc Fiaschi <jm.fiaschi@gmail.com>"]
edition = "2018"
description = "Interface to merge serde_json::Value."
license = "MIT OR Apache-2.0"
include = ["src/*","benches/*","Cargo.toml","LICENCE"]
repository = "https://github.com/jmfiaschi/json_value_merge"
keywords = ["serde", "json", "value", "merge","path"]
readme = "README.md"
categories = ["encoding"]

[dependencies]
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
