[package]
name = "json_value_merge"
version = "2.0.0-beta.1"
authors = ["Jean-Marc Fiaschi <jm.fiaschi@gmail.com>"]
edition = "2018"
description = "Interface to merge serde_json::Value objects."
license = "MIT OR Apache-2.0"
include = ["src/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/jmfiaschi/json_value_merge"
keywords = ["serde", "json", "value", "merge", "path"]
readme = "README.md"
categories = ["encoding"]

[dependencies]
serde_json = { version="1.0", default-features = false }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"

[profile.release]
lto = true
